[package]
name = "count_multitask"
version = "0.1.0"

# enable child task printing to terminal
[dependencies]
core2 = { version = "0.4.0", default-features = false, features = ["alloc", "nightly"] }
[dependencies.stdio]
path = "../../libs/stdio"
[dependencies.app_io]
path = "../../kernel/app_io"

[dependencies.log]
version = "0.4.8"

[dependencies.logger]
path = "../../kernel/logger"

[dependencies.spawn]
path = "../../kernel/spawn"

[dependencies.task]
path = "../../kernel/task" 

# ----------------------- #
# shared:

[dependencies.terminal_print]
path = "../../kernel/terminal_print"

[dependencies.hpet]
path = "../../kernel/acpi/hpet"

[dependencies.smoltcp_helper]
path = "../../kernel/smoltcp_helper"
