[package]
name = "test_multitask"
version = "0.1.0"
edition = "2021"

[dependencies.terminal_print]
path = "../../kernel/terminal_print"

[dependencies.hpet]
path = "../../kernel/acpi/hpet"

[dependencies.smoltcp_helper]
path = "../../kernel/smoltcp_helper"

[dependencies.sleep]
path = "../../kernel/sleep"

[dependencies.task_async]
path = "../../kernel/task_async"

[dependencies.timer_future]
path = "../../kernel/timer_future"

[dependencies.waker_executor]
path = "../../kernel/waker_executor"
